Updated design and content
Full update of design and content

--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
       rel="stylesheet"
     />
   </head>
+
   <body>
     <nav>
       <a href="index.html">projects</a>
@@ -31,21 +32,17 @@
       <img src="images/profile.jpg" alt="profile picture" />
     </header>
     <main>
-      <div class="project">
-        <img src="images/preview1.png" alt="project preview" />
-        <h2>Project 1</h2>
-        <p>Technology: HTML, CSS, JavaScript</p>
-        <a href="https://cwalbanese.github.io/cars-trivia/" target="_blank"
-          >https://cwalbanese.github.io/cars-trivia/</a
-        >
-      </div>
-      <div class="project">
-        <img src="images/preview2.png" alt="project preview" />
-        <h2>Project 2</h2>
-        <p>Technology: HTML, CSS, JavaScript, React</p>
-        <a href="https://thirsty-brewery-search.herokuapp.com/" target="_blank"
-          >https://thirsty-brewery-search.herokuapp.com/</a
-        >
+      <div class="about">
+        <h2>About</h2>
+        <p>
+          I'm a New York based software engineer, experienced in full stack web
+          development. My skills allow me to solve complex programming problems
+          presented on the job. I love technology, whether it be computers or
+          with my prior experience in the automotive industry. I'm passionate to
+          know how things work, how to build them, and how to fix them, this is
+          what drives me. My technical problem solving mindset has been an asset
+          to me at any position, both on a team and in leadership roles.
+        </p>
       </div>
     </main>
   </body>
