--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Baloo+Bhai&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <nav>
