--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap"
+      href="https://fonts.googleapis.com/css?family=Baloo+Bhai&display=swap"
       rel="stylesheet"
     />
   </head>
