Added additional links
Added links to the project images as well, so that they are clickable along with the link below. More user friendly approach.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
     </header>
     <main>
       <div class="project">
-        <img src="images/preview1.png" alt="project preview" />
+        <a href="https://cwalbanese.github.io/cars-trivia/" target="_blank"
+          ><img src="images/preview1.png" alt="project preview"
+        /></a>
         <h2>Project 1</h2>
         <p>Technology: HTML, CSS, JavaScript</p>
         <a href="https://cwalbanese.github.io/cars-trivia/" target="_blank"
@@ -40,7 +42,9 @@
         >
       </div>
       <div class="project">
-        <img src="images/preview2.png" alt="project preview" />
+        <a href="https://thirsty-brewery-search.herokuapp.com/" target="_blank"
+          ><img src="images/preview2.png" alt="project preview"
+        /></a>
         <h2>Project 2</h2>
         <p>Technology: HTML, CSS, JavaScript, React</p>
         <a href="https://thirsty-brewery-search.herokuapp.com/" target="_blank"
