updated background and css

--- a/index.html
+++ b/index.html
@@ -16,41 +16,47 @@
     />
   </head>
   <body>
-    <nav>
-      <a href="index.html">projects</a>
-      <a href="about.html">about</a>
-      <a href="https://www.linkedin.com/in/chris-albanese/" target="_blank"
-        >linkedin</a
-      >
-      <a href="https://github.com/cwalbanese" target="_blank">github</a>
-      <a href="mailto:cwalbanese@gmail.com">email</a>
-    </nav>
-    <header>
-      <h1>CHRIS ALBANESE</h1>
-      <h2>New York Web Developer</h2>
-      <img src="images/profile.jpg" alt="profile picture" />
-    </header>
-    <main>
-      <div class="project">
-        <a href="https://cwalbanese.github.io/cars-trivia/" target="_blank"
-          ><img src="images/preview1.png" alt="project preview"
-        /></a>
-        <h2>Project 1</h2>
-        <p>Technology: HTML, CSS, JavaScript</p>
-        <a href="https://cwalbanese.github.io/cars-trivia/" target="_blank"
-          >https://cwalbanese.github.io/cars-trivia/</a
+    <div class="page">
+      <nav>
+        <a href="index.html">projects</a>
+        <a href="about.html">about</a>
+        <a href="https://www.linkedin.com/in/chris-albanese/" target="_blank"
+          >linkedin</a
         >
-      </div>
-      <div class="project">
-        <a href="https://thirsty-brewery-search.herokuapp.com/" target="_blank"
-          ><img src="images/preview2.png" alt="project preview"
-        /></a>
-        <h2>Project 2</h2>
-        <p>Technology: HTML, CSS, JavaScript, React</p>
-        <a href="https://thirsty-brewery-search.herokuapp.com/" target="_blank"
-          >https://thirsty-brewery-search.herokuapp.com/</a
-        >
-      </div>
-    </main>
+        <a href="https://github.com/cwalbanese" target="_blank">github</a>
+        <a href="mailto:cwalbanese@gmail.com">email</a>
+      </nav>
+      <header>
+        <h1>CHRIS ALBANESE</h1>
+        <h2>New York Web Developer</h2>
+        <img src="images/profile.jpg" alt="profile picture" />
+      </header>
+      <main>
+        <div class="project">
+          <a href="https://cwalbanese.github.io/cars-trivia/" target="_blank"
+            ><img src="images/preview1.png" alt="project preview"
+          /></a>
+          <h2>Project 1</h2>
+          <p>Technology: HTML, CSS, JavaScript</p>
+          <a href="https://cwalbanese.github.io/cars-trivia/" target="_blank"
+            >https://cwalbanese.github.io/cars-trivia/</a
+          >
+        </div>
+        <div class="project">
+          <a
+            href="https://thirsty-brewery-search.herokuapp.com/"
+            target="_blank"
+            ><img src="images/preview2.png" alt="project preview"
+          /></a>
+          <h2>Project 2</h2>
+          <p>Technology: HTML, CSS, JavaScript, React</p>
+          <a
+            href="https://thirsty-brewery-search.herokuapp.com/"
+            target="_blank"
+            >https://thirsty-brewery-search.herokuapp.com/</a
+          >
+        </div>
+      </main>
+    </div>
   </body>
 </html>
