--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Chris Albanese - Software Engineer</title>
     <link href="styles.css" rel="stylesheet" />
     <link
-      href="https://fonts.googleapis.com/css?family=Anton|Open+Sans&display=swap"
+      href="https://fonts.googleapis.com/css?family=Lato&display=swap"
       rel="stylesheet"
     />
     <link
