--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <img src="images/profile.jpg" alt="profile picture" />
       </header>
       <main>
-        <div class="project">
+        <div class="project project-right">
           <a href="https://cwalbanese.github.io/cars-trivia/" target="_blank"
             ><img src="images/preview1.png" alt="project preview"
           /></a>
@@ -49,11 +49,21 @@
             ><img src="images/preview2.png" alt="project preview"
           /></a>
           <h2>Project 2</h2>
-          <p>Technology: HTML, CSS, JavaScript, React</p>
+          <p>Technology: ReactJS</p>
           <a
             href="https://thirsty-brewery-search.herokuapp.com/"
             target="_blank"
             >https://thirsty-brewery-search.herokuapp.com/</a
+          >
+        </div>
+        <div class="project project-right">
+          <a href="https://portfoliorater.herokuapp.com/" target="_blank"
+            ><img src="images/preview3.png" alt="project preview"
+          /></a>
+          <h2>Project 3</h2>
+          <p>Technology: NodeJS, ReactJS, MongoDB</p>
+          <a href="https://portfoliorater.herokuapp.com/" target="_blank"
+            >https://portfoliorater.herokuapp.com/</a
           >
         </div>
       </main>
