--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css?family=Baloo+Bhai&display=swap"
+      href="https://fonts.googleapis.com/css?family=Fjalla+One&display=swap"
       rel="stylesheet"
     />
   </head>
