--- a/about.html
+++ b/about.html
@@ -7,11 +7,11 @@
     <title>Chris Albanese - Software Engineer</title>
     <link href="styles.css" rel="stylesheet" />
     <link
-      href="https://fonts.googleapis.com/css?family=Anton|Open+Sans&display=swap"
+      href="https://fonts.googleapis.com/css?family=Lato&display=swap"
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css?family=Baloo+Bhai&display=swap"
+      href="https://fonts.googleapis.com/css?family=Lalezar&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -29,7 +29,6 @@
     <header>
       <h1>CHRIS ALBANESE</h1>
       <h2>New York Web Developer</h2>
-      <img src="images/profile.jpg" alt="profile picture" />
     </header>
     <main>
       <div class="about">
@@ -43,6 +42,9 @@
           what drives me. My technical problem solving mindset has been an asset
           to me at any position, both on a team and in leadership roles.
         </p>
+      </div>
+      <div class="about-picture">
+        <img src="images/profile.jpg" alt="profile picture" />
       </div>
     </main>
   </body>
