--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
       <h1>CHRIS ALBANESE</h1>
       <h2>New York Web Developer</h2>
     </header>
-    <main>
+    <main class="about-main">
       <div class="about">
         <h2>About</h2>
         <p>
