--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </div>
     </header>
     <section id="projects">
-      <h2 class="projects-title">PROJECTS</h2>
+      <h2 class="title">PROJECTS</h2>
       <div class="projects-content">
         <div class="project">
           <a href="https://portfoliorater.herokuapp.com/" target="_blank"
@@ -75,7 +75,7 @@
       </div>
     </section>
     <section id="about">
-      <h2 class="about-title">ABOUT ME</h2>
+      <h2 class="title">ABOUT ME</h2>
       <div class="about">
         <p>
           Hi! I'm Chris, a New York based software engineer.
@@ -110,7 +110,13 @@
         </p>
       </div>
     </section>
-    <footer><p>&copy; 2020 CHRIS ALBANESE</p></!
-    -->
+    <section id="skills">
+      <h2 class="title">SKILLS</h2>
+      <p>
+        HTML, CSS, JavaScript, ReactJS, NodeJS, ExpressJS, Python, Django,
+        MongoDB, PostgreSQL, Git, GitHub, Agile, Scrum
+      </p>
+    </section>
+    <footer><p>&copy; 2020 CHRIS ALBANESE</p></footer>
   </body>
 </html>
