--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css?family=Lato&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="favicon.ico" type="image/x-icon" sizes="16x16" />
     <link
       href="https://fonts.googleapis.com/css?family=Lalezar&display=swap"
       rel="stylesheet"
