updated mobile css

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <nav>
       <a href="#projects">PROJECTS</a>
       <a href="#about">ABOUT</a>
+      <a href="#skills">SKILLS</a>
       <a href="https://www.linkedin.com/in/chris-albanese/" target="_blank"
         >LINKEDIN</a
       >
