--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       rel="stylesheet"
     />
     <link rel="icon" href="favicon.ico" type="image/x-icon" sizes="16x16" />
+    <link rel=”apple-touch-icon” href=”images/apple-touch-icon.png”>
     <link
       href="https://fonts.googleapis.com/css?family=Lalezar&display=swap"
       rel="stylesheet"
