updated navigation bar

--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
     <title>
       Chris Albanese - Software Engineer
     </title>
-    <link href="styles.css" rel="stylesheet" />
+
     <link
       href="https://fonts.googleapis.com/css?family=Lato&display=swap"
       rel="stylesheet"
     />
+    <link href="styles.css" rel="stylesheet" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" sizes="16x16" />
     <link rel=”apple-touch-icon” href=”images/apple-touch-icon.png”>
     <link
@@ -20,15 +25,18 @@
     />
   </head>
   <body>
-    <nav>
-      <a href="#projects">PROJECTS</a>
-      <a href="#about">ABOUT</a>
-      <a href="#skills">SKILLS</a>
-      <a href="https://www.linkedin.com/in/chris-albanese/" target="_blank"
-        >LINKEDIN</a
-      >
-      <a href="https://github.com/cwalbanese" target="_blank">GITHUB</a>
-      <a href="mailto:cwalbanese@gmail.com">EMAIL</a>
+    <nav class="navBar">
+      <img class="menu" src="images/menu.svg" alt="menu" />
+      <div class="navLink">
+        <a href="#projects">PROJECTS</a>
+        <a href="#about">ABOUT</a>
+        <a href="#skills">SKILLS</a>
+        <a href="mailto:cwalbanese@gmail.com">EMAIL</a>
+        <a href="https://www.linkedin.com/in/chris-albanese/" target="_blank"
+          >LINKEDIN</a
+        >
+        <a href="https://github.com/cwalbanese" target="_blank">GITHUB</a>
+      </div>
     </nav>
     <header>
       <div class="header-background"></div>
@@ -120,6 +128,17 @@
         MongoDB, PostgreSQL, Git, GitHub, Agile, Scrum
       </p>
     </section>
+    <section id="contact">
+      <h2 class="title">CONTACT ME</h2>
+      <div class="contact">
+        <a href="mailto:cwalbanese@gmail.com">EMAIL</a
+        ><a href="https://www.linkedin.com/in/chris-albanese/" target="_blank"
+          >LINKEDIN</a
+        >
+        <a href="https://github.com/cwalbanese" target="_blank">GITHUB</a>
+      </div>
+    </section>
     <footer><p>&copy; 2020 CHRIS ALBANESE</p></footer>
+    <script src="script.js"></script>
   </body>
 </html>
