updated project details

--- a/index.html
+++ b/index.html
@@ -54,7 +54,14 @@
             ><img src="images/preview3.png" alt="project preview"
           /></a>
           <h2>Portfolio Rater</h2>
-          <p>Technology: NodeJS, ReactJS, MongoDB</p>
+          <br />
+          <p>Tech: NodeJS, ReactJS, MongoDB</p>
+          <br />
+          <p>
+            Team of 3, following Agile methodologies with daily Scrum stand-ups.
+            Front-end with React, Back-end API with Node/Mongo.
+          </p>
+          <br />
           <a href="https://portfoliorater.herokuapp.com/" target="_blank"
             >https://portfoliorater.herokuapp.com/</a
           >
@@ -66,7 +73,14 @@
             ><img src="images/preview2.png" alt="project preview"
           /></a>
           <h2>Thirsty</h2>
-          <p>Technology: ReactJS</p>
+          <br />
+          <p>Tech: ReactJS</p>
+          <br />
+          <p>
+            A search tool to find local breweries by fetching data from a
+            third-party API. Front-end built with React JavaScript.
+          </p>
+          <br />
           <a
             href="https://thirsty-brewery-search.herokuapp.com/"
             target="_blank"
@@ -78,7 +92,14 @@
             ><img src="images/preview1.png" alt="project preview"
           /></a>
           <h2>Car Trivia</h2>
-          <p>Technology: HTML, CSS, JavaScript</p>
+          <br />
+          <p>Tech: HTML, CSS, JavaScript</p>
+          <br />
+          <p>
+            A trivia game I created when I was just learning the bare bones of
+            web development, using vanilla Javascript.
+          </p>
+          <br />
           <a href="https://cwalbanese.github.io/cars-trivia/" target="_blank"
             >https://cwalbanese.github.io/cars-trivia/</a
           >
