fixed spelling error

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <br />
           <p>
             A trivia game I created when I was just learning the bare bones of
-            web development, using vanilla Javascript.
+            web development, using vanilla JavaScript.
           </p>
           <br />
           <a href="https://cwalbanese.github.io/cars-trivia/" target="_blank"
