--- a/index.html
+++ b/index.html
@@ -49,6 +49,43 @@
       <h2 class="title">PROJECTS</h2>
       <div class="projects-content">
         <div class="project">
+          <a
+            href="https://http://total-garage-frontend.herokuapp.com/"
+            target="_blank"
+            ><img src="images/preview4.png" alt="project preview"
+          /></a>
+          <h2>Total Garage</h2>
+          <br />
+          <p>Tech: Python, Django, ReactJS, PostgreSQL</p>
+          <br />
+          <p>
+            Team of 2, pair programming. Front-end with React, Back-end API with
+            Python/Django and PostgreSQL.
+          </p>
+          <br />
+          <p>
+            <a
+              href="https://http://total-garage-frontend.herokuapp.com/"
+              target="_blank"
+              >View Deployed App</a
+            >
+          </p>
+          <p>
+            <a
+              href="https://github.com/danielfruth/total_garage_frontend/"
+              target="_blank"
+              >View Front-end Code</a
+            >
+          </p>
+          <p>
+            <a
+              href="https://github.com/cwalbanese/total_garage_backend/"
+              target="_blank"
+              >View Back-end code</a
+            >
+          </p>
+        </div>
+        <div class="project">
           <a href="https://portfoliorater.herokuapp.com/" target="_blank"
             ><img src="images/preview3.png" alt="project preview"
           /></a>
@@ -61,10 +98,27 @@
             Front-end with React, Back-end API with Node/Mongo.
           </p>
           <br />
-          <a href="https://portfoliorater.herokuapp.com/" target="_blank"
-            >https://portfoliorater.herokuapp.com/</a
-          >
+          <p>
+            <a href="https://portfoliorater.herokuapp.com/" target="_blank"
+              >View Deployed App</a
+            >
+          </p>
+          <p>
+            <a
+              href="https://github.com/Paradox1111/portfolioRater/"
+              target="_blank"
+              >View Front-end Code</a
+            >
+          </p>
+          <p>
+            <a
+              href="https://github.com/Paradox1111/portfolioRaterAPI/"
+              target="_blank"
+              >View Back-end code</a
+            >
+          </p>
         </div>
+
         <div class="project">
           <a
             href="https://thirsty-brewery-search.herokuapp.com/"
@@ -80,12 +134,22 @@
             third-party API. Front-end built with React JavaScript.
           </p>
           <br />
-          <a
-            href="https://thirsty-brewery-search.herokuapp.com/"
-            target="_blank"
-            >https://thirsty-brewery-search.herokuapp.com/</a
-          >
+          <p>
+            <a
+              href="https://thirsty-brewery-search.herokuapp.com/"
+              target="_blank"
+              >View Deployed App</a
+            >
+          </p>
+          <p>
+            <a
+              href="https://github.com/cwalbanese/thirsty-brewery-search/"
+              target="_blank"
+              >View Code</a
+            >
+          </p>
         </div>
+
         <div class="project">
           <a href="https://cwalbanese.github.io/cars-trivia/" target="_blank"
             ><img src="images/preview1.png" alt="project preview"
@@ -99,9 +163,16 @@
             web development, using vanilla JavaScript.
           </p>
           <br />
-          <a href="https://cwalbanese.github.io/cars-trivia/" target="_blank"
-            >https://cwalbanese.github.io/cars-trivia/</a
-          >
+          <p>
+            <a href="https://cwalbanese.github.io/cars-trivia/" target="_blank"
+              >View Deployed App</a
+            >
+          </p>
+          <p>
+            <a href="https://github.com/cwalbanese/cars-trivia/" target="_blank"
+              >View Code</a
+            >
+          </p>
         </div>
       </div>
     </section>
