--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
       <h2 class="title">PROJECTS</h2>
       <div class="projects-content">
         <div class="project">
-          <a
-            href="https://http://total-garage-frontend.herokuapp.com/"
-            target="_blank"
+          <a href="https://total-garage-frontend.herokuapp.com/" target="_blank"
             ><img src="images/preview4.png" alt="project preview"
           /></a>
           <h2>Total Garage</h2>
@@ -65,7 +63,7 @@
           <br />
           <p>
             <a
-              href="https://http://total-garage-frontend.herokuapp.com/"
+              href="https://total-garage-frontend.herokuapp.com/"
               target="_blank"
               >View Deployed App</a
             >
