--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="header-background"></div>
       <div class="header-content">
         <h1>CHRIS <span class="lastname">ALBANESE</span></h1>
-        <h2>New York Web Developer</h2>
+        <h2>Software Engineer</h2>
         <img src="images/profile.jpg" alt="profile picture" />
       </div>
     </header>
