slide in effect of header added

--- a/index.html
+++ b/index.html
@@ -39,10 +39,12 @@
     </nav>
     <header>
       <div class="header-background"></div>
-      <div class="header-content">
-        <h1>CHRIS <span class="lastname">ALBANESE</span></h1>
-        <h2>Software Engineer</h2>
-        <img src="images/profile.jpg" alt="profile picture" />
+      <div class="box-wrapper loading">
+        <div class="header-content box">
+          <h1>CHRIS <span class="lastname">ALBANESE</span></h1>
+          <h2>Software Engineer</h2>
+          <img src="images/profile.jpg" alt="profile picture" />
+        </div>
       </div>
     </header>
     <section id="projects">
