--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
           >LINKEDIN</a
         >
         <a href="https://github.com/cwalbanese" target="_blank">GITHUB</a>
+        <a href="resume.pdf" target="_blank">RESUME</a>
       </div>
     </nav>
     <header>
@@ -209,6 +210,10 @@
           <a href="https://www.linkedin.com/in/chris-albanese/" target="_blank"
             >Visit my LinkedIn!</a
           >
+        </p>
+        <br />
+        <p class="connect">
+          <a href="resume.pdf" target="_blank">View my Resume!</a>
         </p>
       </div>
     </section>
