--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <section id="projects">
       <h2 class="title">PROJECTS</h2>
       <div class="projects-content">
-        <div class="project">
+        <div class="project hidden">
           <a href="https://total-garage-frontend.herokuapp.com/" target="_blank"
             ><img src="images/preview4.png" alt="project preview"
           /></a>
@@ -86,7 +86,7 @@
             >
           </p>
         </div>
-        <div class="project">
+        <div class="project hidden">
           <a href="https://portfoliorater.herokuapp.com/" target="_blank"
             ><img src="images/preview3.png" alt="project preview"
           /></a>
@@ -120,7 +120,7 @@
           </p>
         </div>
 
-        <div class="project">
+        <div class="project hidden">
           <a
             href="https://thirsty-brewery-search.herokuapp.com/"
             target="_blank"
@@ -151,7 +151,7 @@
           </p>
         </div>
 
-        <div class="project">
+        <div class="project hidden">
           <a href="https://cwalbanese.github.io/cars-trivia/" target="_blank"
             ><img src="images/preview1.png" alt="project preview"
           /></a>
